# OpenReplay

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
OpenReplay/: AudioCapture.cpp  AudioCapture.h  CMakeLists.txt  ClipManager.cpp  ClipManager.h  Config.cpp  Config.h  DiskBackedBuffer.cpp  DiskBackedBuffer.h  ImGuiLayer.cpp  ImGuiLayer.h  Locale.cpp  Locale.h  Muxer.cpp  Muxer.h  OpenReplay.cpp  OpenReplay.h  Overlay.cpp  Overlay.h  ScreenCapture.cpp  ScreenCapture.h  UI.cpp  UI.h  VideoEncoder.cpp  VideoEncoder.h  config.json  en.json  main.cpp
OpenReplay/cmake/: FFmpegDownload.cmake
